proj1/tests/error/large_oct.py
a < 01010102345720320201020320423320202303
0102103012301203102 > 0203120403205023402320130123012